# stream-membership

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: draft-pdf.yml
docs/: .gitignore  api.rst  conf.py  dists.rst  index.rst  install.rst  introduction.rst  model.rst  plot.rst
notebooks/: Tutorial-stream-offtrack-background.ipynb
paper/: joss_paper.bib  joss_paper.md  paper.bib  paper.md
paper/jats/: paper.jats
src/stream_membership/: __init__.py  _typing.py  _version.py  model.py  plot.py  utils.py
src/stream_membership/distributions/: __init__.py  concatenated.py  normal_spline.py  spline_mixture.py
stream_membership/: __init__.py  base.py  components.py  gmm.py  gridgmm.py  helpers.py  model.py  model_base.py  model_spline1d.py  numpyro_dist.py  optim.py  plot.py  truncatedgridgmm.py  truncnorm.py  utils.py  variables.py
stream_membership/_numpyro_helpers/: dirichlet_spline.py  normal_spline.py  numpyro_dist.py
stream_membership/distributions/: __init__.py  concatenated.py  dirichlet_spline.py  gmm.py  normal_spline.py  numpyro_helpers.py  optim.py  spline_mixture.py  stacked_component.py
stream_membership/distributions/tests/: test_concatenated.py  test_gmm.py  test_spline_dists.py  test_spline_mixture.py
stream_membership/tests/: test_components.py  test_gridgmm.py  test_model.py  test_truncatedgridgmm.py  test_utils.py  test_variables.py
tests/: test_concatenated.py  test_gmm.py  test_model.py  test_spline_dists.py  test_spline_mixture.py
