[metadata]
name = stream_membership
version = attr: stream_membership.VERSION
description = Quantifying stellar stream membership with probabilistic models
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.22
    astropy>=5
    scipy>=1.8
    packaging
    jax
    jaxlib
    jax_cosmo
    numpyro
    numpyro_ext

[flake8]
max-line-length = 88
per-file-ignores =
    # imported but unused
    __init__.py: F401, F403
    # local variable assigned but never used
    test*.py: F841
    docs/tutorials/*: E703
extend-ignore =
    E203
    E226
    E402
    E741
    W503
    W504

[black]
line-length = 88

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
